Add `test:watch` command

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "codecov": "nyc report -r text-lcov | codecov",
     "lint": "eslint bin lib test",
     "test": "nyc ava",
+    "test:watch": "npm test -- --watch",
     "build": "node bin/build",
     "prebuild": "npm run test",
     "pretest": "npm run lint",
