--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
   ],
   "devDependencies": {
     "ava": "^0.13.0",
-    "babel-eslint": "^6.0.0-beta.3",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.7.2",
     "codecov.io": "^0.1.6",
-    "eslint": "~2.2.0",
-    "eslint-config-wyze": "^1.2.1",
-    "nyc": "^6.0.0"
+    "eslint": "^2.4.0",
+    "eslint-config-wyze": "^1.3.0",
+    "nyc": "^6.1.1"
   },
   "dependencies": {
     "lodash.filter": "^4.2.1"
