--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.nyc_output
-coverage
-node_modules
-styles
+/.nyc_output
+/coverage
+/node_modules
+/styles/flexicons.css
 .DS_Store
 npm-debug.log
