--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "eslint": "^2.4.0",
     "eslint-config-wyze": "^1.3.0",
     "lodash.isarray": "^4.0.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isstring": "^4.0.1",
     "nyc": "^6.1.1"
   },
   "dependencies": {
