--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash.isarray": "^4.0.0",
     "lodash.isobject": "^3.0.2",
     "lodash.isstring": "^4.0.1",
+    "mock-require": "^1.2.1",
     "nyc": "^6.1.1"
   },
   "dependencies": {
