--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
   ],
   "devDependencies": {
     "ava": "^0.13.0",
-    "babel-eslint": "^6.0.0-beta.6",
+    "babel-eslint": "^6.0.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.7.2",
     "codecov.io": "^0.1.6",
-    "eslint": "^2.4.0",
+    "eslint": "^2.7.0",
     "eslint-config-wyze": "^1.3.0",
     "lodash.isarray": "^4.0.0",
     "lodash.isobject": "^3.0.2",
@@ -65,7 +65,7 @@
     "nyc": "^6.1.1"
   },
   "dependencies": {
-    "lodash.mapvalues": "^4.2.0",
+    "lodash.mapvalues": "^4.3.0",
     "postcss": "^5.0.19",
     "postcss-hexrgba": "^0.2.0",
     "postcss-mixins": "^4.0.1",
