--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "postcss": "^5.0.21",
     "postcss-hexrgba": "^0.2.0",
     "postcss-mixins": "^4.0.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-url": "^5.1.2"
+    "postcss-nested": "^1.0.0"
   }
 }
