--- a/package.json
+++ b/package.json
@@ -57,7 +57,11 @@
     "babel-register": "^6.9.0",
     "codecov.io": "^0.1.6",
     "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
     "eslint-config-wyze": "^2.0.0",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-wyze": "^1.4.0",
     "lodash.isarray": "^4.0.0",
     "lodash.isobject": "^3.0.2",
     "lodash.isstring": "^4.0.1",
