--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "lint": "eslint bin lib test",
     "test": "nyc ava",
     "test:watch": "npm test -- --watch",
-    "build": "node bin/build",
-    "prebuild": "npm run test",
-    "pretest": "npm run lint",
-    "preversion": "npm run build"
+    "pretest": "npm run lint"
   },
   "ava": {
     "babel": "inherit",
